updated html file

--- a/lab08/08lab-text-mining.html
+++ b/lab08/08lab-text-mining.html
@@ -2633,6 +2633,7 @@ Quercus.</p></li>
 and add it to your github site. Add link to github site in your
 html.</p></li>
 </ol>
+<p>GitHub Site: <a href="https://github.com/rrjk76/JSC370-labs/tree/main/lab08" class="uri">https://github.com/rrjk76/JSC370-labs/tree/main/lab08</a></p>
 <div id="setup-packages" class="section level3">
 <h3>Setup packages</h3>
 <p>You should load in <code>tidyverse</code>, (or
@@ -2770,8 +2771,8 @@ tokens</code></pre>
 <pre class="r"><code>tokens |&gt;
   count(word, sort=TRUE) |&gt;
   wordcloud2(size = 0.4, color =&quot;random-light&quot;, backgroundColor = &quot;black&quot;)</code></pre>
-<div class="wordcloud2 html-widget html-fill-item" id="htmlwidget-c620fec0ef9124c01cab" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-c620fec0ef9124c01cab">{"x":{"word":["a","and","at","for","he","in","is","no","of","on","patient","right","she","the","then","this","to","was","were","with"],"freq":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"fontFamily":"Segoe UI","fontWeight":"bold","color":"random-light","minSize":0,"weightFactor":72,"backgroundColor":"black","gridSize":0,"minRotation":-0.7853981633974483,"maxRotation":0.7853981633974483,"shuffle":true,"rotateRatio":0.4,"shape":"circle","ellipticity":0.65,"figBase64":null,"hover":null},"evals":[],"jsHooks":{"render":[{"code":"function(el,x){\n                        console.log(123);\n                        if(!iii){\n                          window.location.reload();\n                          iii = False;\n\n                        }\n  }","data":null}]}}</script>
+<div class="wordcloud2 html-widget html-fill-item" id="htmlwidget-59c2e4b881092874ed12" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-59c2e4b881092874ed12">{"x":{"word":["a","and","at","for","he","in","is","no","of","on","patient","right","she","the","then","this","to","was","were","with"],"freq":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"fontFamily":"Segoe UI","fontWeight":"bold","color":"random-light","minSize":0,"weightFactor":72,"backgroundColor":"black","gridSize":0,"minRotation":-0.7853981633974483,"maxRotation":0.7853981633974483,"shuffle":true,"rotateRatio":0.4,"shape":"circle","ellipticity":0.65,"figBase64":null,"hover":null},"evals":[],"jsHooks":{"render":[{"code":"function(el,x){\n                        console.log(123);\n                        if(!iii){\n                          window.location.reload();\n                          iii = False;\n\n                        }\n  }","data":null}]}}</script>
 </div>
 </div>
 <div id="the-results-here-dont-really-make-sense-and-its-because-there-are-many-stop-words-like-and-the-this-etc.-that-werent-filtered-out.-hence-from-this-output-we-dont-really-get-any-insightful-insights." class="section level2">
